refactor: ShelterService에서 DTO 변환 로직은 모두 ShelterMapper 클래스로 이동